# Tailwebs_TeacherPortal

./: LICENSE  README.md  manage.py  pyproject.toml
Portal/: forms.py  models.py  urls.py  views.py
Portal/management/commands/: seed_data.py
Portal/static/js/: dashboard.js  login.js
Portal/templates/: dashboard.html  login.html
Portal/templates/portal/: dashboard.html  login.html
TeacherPortal/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/css/: dashboard.css  login.css
